# jptv_subtitles

./: .gitignore  cli.py  cookies.json.template  pyproject.toml
jptv_subtitles/: main.py
